# Customer-Support-Assistant-Backend-Assessment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/: auth.py  tickets.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  models.py
app/db/repositories/: base.py  ticket_repository.py  user_repository.py
app/schemas/: auth.py  message.py  ticket.py
app/services/: ai_service.py  auth_service.py  ticket_service.py
